form spacing corrected

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,6 +26,7 @@ $background-color: #2196f3;
   font-family: 'Merienda One', cursive;
   margin: 50px;
   font-size: 55px;
+  padding: 10px;
   white-space: nowrap
 }
 
@@ -40,11 +41,16 @@ $background-color: #2196f3;
   min-height: 300px;
   align-items: center;
 }
-
+.forms-margin {
+  margin: 50px 50px 0 50px;
+}
 @media (max-width: $screen-md-min) {
   .top-icon {
     display: inline;
     text-align: center;
+  }
+  .forms-margin {
+    margin: 0;
   }
 
   .side-icons {
@@ -65,6 +71,7 @@ $background-color: #2196f3;
   .headline {
     margin: 0;
   }
+
 }
 .side-cat {
   margin-top: 150px;
@@ -93,9 +100,7 @@ body {
   margin-left: 50px;
   margin-right: 50px;
 }
-.forms-margin {
-  margin: 50px 50px 0 50px;
-}
+
 .button-left {
   text-align: left;
 }
@@ -123,6 +128,7 @@ body {
 }
 .footer-align {
   color: white;
+  margin-top: 5px;
 }
 body.logged-in {
 }
